--- a/src/pages/colorsFonts/colorsFonts.scss
+++ b/src/pages/colorsFonts/colorsFonts.scss
@@ -1,25 +1,187 @@
-.wrapper {
-	display: flex;
-	flex-wrap: wrap;
-	flex-direction: row;
-	justify-content: space-between;
-	align-content: center;
-}
-
 @import '../../style/global.scss';
-@import '../../style/test.scss';
-@import '../../components/card-goods/card-goods.scss';
 
+html,
 body {
-	background: pink;
+	font-size: 14px;
 }
 
-h2 {
-	color: red;
+.logo {
+	margin-top: 30px;
+	margin-left: 30px;
 }
 
-.text {
+.wrapper__lists {
 	display: flex;
-	align-items: center;
 	justify-content: space-between;
+	min-width: 1000px;
+}
+
+.colors {
+	&__list {
+		margin: 0;
+		padding: 0;
+		margin-top: 62px; 
+		margin-left: 150px;
+		list-style: none;
+	}
+
+	&__item {
+		display: flex;
+  	margin-bottom: 3px;
+	}
+
+	&__item:nth-child(1) .colors__square {
+		background: $black;
+	}
+
+	&__item:nth-child(2) .colors__square {
+		background: $black-75;
+	}
+
+	&__item:nth-child(3) .colors__square {
+		background: $black-50;
+	}
+
+	&__item:nth-child(4) .colors__square {
+		background: $black-25;
+	}
+
+	&__item:nth-child(5) .colors__square {
+		background: $black-05;
+	}
+
+	&__item:nth-child(6) .colors__square {
+		background: $purple;
+	}
+
+	&__item:nth-child(7) .colors__square {
+		background: $green;
+	}
+
+	&__square {
+		width: 70px;
+		height: 70px;
+		background: #1F2041;
+		border-radius: 6px;
+	}
+
+	&__wrapper-text {
+		display: flex;
+		flex-direction: column;
+		margin-left: 40px;
+	}
+
+	&__text {
+		margin-top: 5px; 
+		margin-bottom: 0;
+		font-family: $caption-font;
+		font-style: normal;
+		font-weight: 600;
+		font-size: 19px;
+		line-height: 29px;
+		color: #1F2041;
+	}
+
+	&__subtext {
+	  margin-top: 5px; 
+		font-family: $caption-font;
+		font-style: normal;
+		font-weight: 400;
+		font-size: 19px;
+		line-height: 29px;
+		color: #1F2041;
+	}
+}
+
+.fonts {
+	&__list {
+		margin: 0;
+		padding: 0;
+		margin-top: 62px;
+		margin-right: 190px; 
+		list-style: none;
+	}
+
+	&__item {
+		display: flex;
+		margin-bottom: 25px; 
+	}
+
+	&__item:nth-child(2) {
+		margin-bottom: 32px;
+	}
+
+	&__item:nth-child(3) {
+		margin-bottom: 34px;
+	}
+
+	&__value {
+		margin-top: 0;
+		font-family: $main-font, sans-serif;
+		font-style: normal;
+		font-weight: 400;
+		font-size: 24px;
+		line-height: 29px;
+		color: $black-25;
+		width: 37px;
+		text-align: right;
+	}
+
+	&__item:nth-child(2) .fonts__value {
+		font-size: 19px;
+		line-height: 23px;
+	}
+
+	&__item:nth-child(3) .fonts__value {
+		font-size: 12px;
+		line-height: 15px;
+	}
+
+	&__item:nth-child(4) .fonts__value {
+		font-size: 14px;
+		line-height: 24px;
+	}
+
+	&__text {
+		width: 336px;
+		margin-top: 0;
+		margin-left: 30px;
+		color: $black;
+	}
+
+	&__item:nth-child(1) .fonts__text {
+		font-family: $caption-font, sans-serif;
+		font-style: normal;
+		font-weight: 600;
+		font-size: 1.71rem;
+		line-height: 2.1rem;
+	}
+
+	&__item:nth-child(2) .fonts__text {
+		font-family: $caption-font, sans-serif;
+		font-style: normal;
+		font-weight: 600;
+		font-size: 1.35rem;
+		line-height: 1.71rem;
+	}
+
+	&__item:nth-child(3) .fonts__text {
+		font-family: $main-font, sans-serif;
+		font-style: normal;
+		font-weight: 600;
+		font-size: 0.85rem;
+		line-height: 1.07rem;
+		text-transform: uppercase;
+		color: $black;
+	}
+
+	&__item:nth-child(4) .fonts__text {
+		font-family: $main-font, sans-serif;
+		font-style: normal;
+		font-weight: 400;
+		font-size: 1rem;
+		line-height: 1.71rem;
+		color: $black-75;
+		width: 310px;
+	}
 }
