--- a/src/pages/formElements/formElements.pug
+++ b/src/pages/formElements/formElements.pug
@@ -1,19 +1,23 @@
 doctype html
 html(lang="ru")
-head
-	meta(charset="UTF-8")
-	title Document
-	<link rel="stylesheet" type="text/css" href="./assets/style/formElements.css">
-	<script src="./assets/js/formElements.js"></script>
-	<link rel="apple-touch-icon" sizes="180x180" href="./static/favicons/apple-touch-icon.png">
-	<link rel="icon" type="image/png" sizes="32x32" href="./static/favicons/favicon-32x32.png">
-	<link rel="icon" type="image/png" sizes="16x16" href="./static/favicons/favicon-16x16.png">
-	<link rel="manifest" href="./static/favicons/site.webmanifest">
-	<link rel="mask-icon" href="./static/favicons/safari-pinned-tab.svg" color="#5bbad5">
-	<meta name="msapplication-TileColor" content="#603cba">
-	<meta name="theme-color" content="#ffffff">
-	<meta name="keywords" content="отель Токсин, hotel Toxin, отель Toxin, забронировать номер, снять комнату, забронировать отель, забронировать гостинницу, забронировать номер в отеле, забронировать номер в гостиннице"/>
-	<meta name="description" content="Сайт бронирование номеров в отеле Toxin">
-	<meta name="viewport" content="initial-scale=1.0, width=device-width">
-body
+	head
+		meta(charset="UTF-8")
+		title Document
+		<link rel="stylesheet" type="text/css" href="./assets/style/formElements.css">
+		<script src="./assets/js/formElements.js"></script>
+		<link rel="apple-touch-icon" sizes="180x180" href="./static/favicons/apple-touch-icon.png">
+		<link rel="icon" type="image/png" sizes="32x32" href="./static/favicons/favicon-32x32.png">
+		<link rel="icon" type="image/png" sizes="16x16" href="./static/favicons/favicon-16x16.png">
+		<link rel="manifest" href="./static/favicons/site.webmanifest">
+		<link rel="mask-icon" href="./static/favicons/safari-pinned-tab.svg" color="#5bbad5">
+		<meta name="msapplication-TileColor" content="#603cba">
+		<meta name="theme-color" content="#ffffff">
+		<meta name="keywords" content="отель Токсин, hotel Toxin, отель Toxin, забронировать номер, снять комнату, забронировать отель, забронировать гостинницу, забронировать номер в отеле, забронировать номер в гостиннице"/>
+		<meta name="description" content="Сайт бронирование номеров в отеле Toxin">
+		<meta name="viewport" content="initial-scale=1.0, width=device-width">
+	body
+		div.wrapper__input
+			//- include ./components/block-inputs.pug
+			include ./components/checkbox.pug
+			div.pop kjlj
 	
