--- a/src/style/global.scss
+++ b/src/style/global.scss
@@ -1,3 +1,213 @@
 @import './normalize.scss';
 @import './fonts.scss';
 @import './variables.scss';
+
+
+label {
+	display: block;
+	@include fonts-for-h3();
+}
+
+input {
+	width: 100%;
+	@include style-for-input();
+}
+
+input:hover,
+input:focus {
+	color: $black-75;
+	border: 1px solid $black-50;
+}
+
+// отключеннное текстовове поле
+input.default {
+	color: $black-25;
+	border: 1px solid $black-25;
+}
+
+input.default::placeholder {
+	color: $black-25;
+	cursor: auto;
+}
+
+input.default::placeholder:hover,
+input.default::placeholder:focus {
+	border: 1px solid $black-25;
+}
+
+.field--select {
+	position: relative;
+
+	&::before {
+		content: "";
+		position: absolute;
+		top: 30px;
+		right: 10px;
+		width: 20px;
+		height: 20px;
+		background: red;
+	}
+}
+
+.field--subscribe {
+	position: relative;
+
+	&::before {
+		content: "";
+		position: absolute;
+		top: 30px;
+		right: 10px;
+		width: 20px;
+		height: 20px;
+		background: red;
+	}
+}
+
+// checkbox
+
+input[type="checkbox"] {
+	display: none;
+}
+
+input[type="checkbox"] + label {
+	position: relative;
+	font-family: $main-font, sans-serif;
+	font-style: normal;
+	font-weight: 400;
+	font-size: 14px;
+	line-height: 18px;
+	color: $black-50;
+
+	text-transform: none;
+
+	padding-left: 30px;
+	margin-bottom: 10px;
+
+	cursor: pointer;
+}
+
+input[type="checkbox"] + label:before {
+	content: "";
+	position: absolute;
+	top: 0;
+	left: 0;
+	display: inline-block;
+	width: 20px;
+	height: 20px;
+
+	background-color: transparent;
+	border: 1px solid $black-25;
+	box-sizing: border-box;
+	border-radius: 4px;
+
+	cursor: pointer;
+}
+
+input[type="checkbox"]:checked + label:before {
+  border: 1px solid $purple;
+  // background: url('../images/sprite.png') no-repeat;
+  background: red;
+
+  background-position: -1px -2px;
+}
+
+
+input[type="radio"] {
+	display: none;
+}
+
+input[type="radio"] + label {
+	position: relative;
+	font-family: $main-font, sans-serif;
+	font-style: normal;
+	font-weight: 400;
+	font-size: 14px;
+	line-height: 18px;
+	color: $black-50;
+
+	text-transform: none;
+
+	padding-left: 30px;
+	margin-bottom: 10px;
+
+	cursor: pointer;
+}
+
+input[type="radio"] + label:before {
+	content: "";
+	position: absolute;
+	top: 0;
+	left: 0;
+	display: inline-block;
+	width: 20px;
+	height: 20px;
+
+	background: #FFFFFF;
+	border: 1px solid rgba(31, 32, 65, 0.25);
+	box-sizing: border-box;
+	border-radius: 10px;
+}
+
+input[type="radio"]:checked + label:before {
+  border: 1px solid $purple;
+  // background: url('../images/sprite.png') no-repeat;
+  background: red;
+
+  background-position: -1px -2px;
+}
+
+
+// переключатель
+.btn--toggle[type="checkbox"] {
+	display: none;
+}
+
+.btn--toggle[type="checkbox"] + label {
+	position: relative;
+	padding: 0 0 0 48px;
+	cursor: pointer;
+	width: auto;
+
+	font-style: normal;
+	font-weight: 400;
+	font-size: 14px;
+	line-height: 24px;
+	color: rgba(31, 32, 65, 0.75);
+	text-transform: none;
+}
+
+.btn--toggle[type="checkbox"] + label::before {
+	content: '';
+	position: absolute;
+	top: 3px;
+	left: 0;
+	width: 36px;
+	height: 18px;
+	border-radius: 13px;
+	background: #ffffff;
+	border: 1px solid rgba(31, 32, 65, 0.25);
+	transition: .2s;
+}
+
+.btn--toggle[type="checkbox"] + label::after {
+	content: '';
+	position: absolute;
+	top: 7px;
+	left: 4px;
+	width: 12px;
+	height: 12px;
+	border-radius: 10px;
+	background: #FFF;
+	transition: .2s;
+	background: rgba(31, 32, 65, 0.25);
+}
+
+.btn--toggle[type="checkbox"]:checked + label::before {
+	border: 1px solid #BC9CFF;
+	background: transparent;
+}
+
+.btn--toggle[type="checkbox"]:checked + label::after {
+	left: 21px;
+	background: linear-gradient(180deg, #BC9CFF 0%, #8BA4F9 100%);
+}
