--- a/src/style/variables.scss
+++ b/src/style/variables.scss
@@ -1,7 +1,7 @@
 // colors
 $black: #1F2041;
 $black-75: rgba(31, 32, 65, 0.75);
-$black-50: rgba(31, 32, 65, 0.5);
+$black-50: rgba(31, 32, 65, 0.50);
 $black-25: rgba(31, 32, 65, 0.25);
 $black-05: rgba(31, 32, 65, 0.05);
 $purple: #BC9CFF;
@@ -46,4 +46,20 @@ $caption-font: 'Quicksand', 'Geneva';
 	font-size: 14px;
 	line-height: 24px;
 	color: $black-75;
+}
+
+@mixin style-for-input {
+	display: block;
+	margin-top: 5px;
+	font-family: $main-font, sans-serif;
+	font-style: normal;
+	font-weight: 400;
+	font-size: 14px;
+	line-height: 18px;
+	padding: 13px 15px;
+	border-radius: 4px;
+	box-sizing: border-box;
+	color: $black-75;
+	border: 1px solid $black-25;
+	cursor: pointer;
 }
