--- a/src/pages/formElements/formElements.pug
+++ b/src/pages/formElements/formElements.pug
@@ -4,7 +4,7 @@ html(lang="ru")
 		meta(charset="UTF-8")
 		title Document
 		<link rel="stylesheet" type="text/css" href="./assets/style/formElements.css">
-		<script src="./assets/js/formElements.js"></script>
+		<script src="./assets/js/formElements.js" defer></script>
 		<link rel="apple-touch-icon" sizes="180x180" href="./static/favicons/apple-touch-icon.png">
 		<link rel="icon" type="image/png" sizes="32x32" href="./static/favicons/favicon-32x32.png">
 		<link rel="icon" type="image/png" sizes="16x16" href="./static/favicons/favicon-16x16.png">
@@ -19,5 +19,4 @@ html(lang="ru")
 		div.wrapper__input
 			//- include ./components/block-inputs.pug
 			include ./components/checkbox.pug
-			div.pop kjlj
 	
