--- a/src/pages/colorsFonts/colorsFonts.pug
+++ b/src/pages/colorsFonts/colorsFonts.pug
@@ -3,7 +3,7 @@ html(lang="ru")
 	head
 		meta(charset="UTF-8")
 		<link rel="stylesheet" type="text/css" href="./assets/style/colorsFonts.css">
-		<script src="./assets/js/colorsFonts.js"></script>
+		<script src="./assets/js/colorsFonts.js" defer></script>
 		<link rel="apple-touch-icon" sizes="180x180" href="./static/favicons/apple-touch-icon.png">
 		<link rel="icon" type="image/png" sizes="32x32" href="./static/favicons/favicon-32x32.png">
 		<link rel="icon" type="image/png" sizes="16x16" href="./static/favicons/favicon-16x16.png">
