--- a/src/pages/formElements/components/block-inputs.pug
+++ b/src/pages/formElements/components/block-inputs.pug
@@ -1,12 +1,12 @@
 div.column.column--inputs
 	div.row-default
 		label text field <span>default</span>
-			input.default(type="text" placeholder="Email")
+			input.field--default(type="text" placeholder="Email")
 	div.row-hover
-		label text field <span>hover/focus</span>
+		label text field <span>hover / focus</span>
 			input(type="text" placeholder="This is pretty awesome")
 	div.row-default
-		label text field <span>hover/focus</span>
+		label dropdown <span>default</span>
 			input.field--select(type="text" placeholder="Сколько гостей") 
 	div.row-default
 		label masked text field <span>default</span>
