--- a/src/pages/formElements/components/block-inputs.scss
+++ b/src/pages/formElements/components/block-inputs.scss
@@ -30,8 +30,25 @@
 	width: 100%;
 	display: flex;
 	justify-content: space-between;
+	margin-top: 17px;
 
 	& label {
 		width: 150px;
+	}
+}
+
+.row-filter-date {
+	margin-top: 17px;
+
+	& label {
+		width: 267px;
+	}
+}
+
+.row-subscribe {
+	margin-top: 20px;
+
+	& label {
+		width: 267px;
 	}
 }
