--- a/src/pages/formElements/formElements.scss
+++ b/src/pages/formElements/formElements.scss
@@ -1,3 +1,9 @@
 @import '../../style/global.scss';
 @import './components/block-inputs.scss';
 @import './components/checkbox.scss';
+
+.wrapper__input {
+	width: 450px;
+	margin: 0 auto;
+	margin-top: 100px;
+}
