написаны стили для кнопок

--- a/src/pages/formElements/formElements.pug
+++ b/src/pages/formElements/formElements.pug
@@ -18,5 +18,6 @@ html(lang="ru")
 	body
 		div.wrapper__input
 			//- include ./components/block-inputs.pug
-			include ./components/checkbox.pug
+			//- include ./components/checkbox.pug
+			include ./components/buttons.pug
 	
