--- a/src/pages/formElements/formElements.scss
+++ b/src/pages/formElements/formElements.scss
@@ -1,6 +1,7 @@
 @import '../../style/global.scss';
 @import './components/block-inputs.scss';
 @import './components/checkbox.scss';
+@import './components/buttons.scss';
 
 .wrapper__input {
 	width: 450px;
