--- a/src/pages/formElements/formElements.pug
+++ b/src/pages/formElements/formElements.pug
@@ -19,5 +19,6 @@ html(lang="ru")
 		div.wrapper__input
 			//- include ./components/block-inputs.pug
 			//- include ./components/checkbox.pug
-			include ./components/buttons.pug
+			//- include ./components/buttons.pug
+			include ./components/dropdown.pug
 	
