--- a/src/pages/formElements/formElements.scss
+++ b/src/pages/formElements/formElements.scss
@@ -2,6 +2,7 @@
 @import './components/block-inputs.scss';
 @import './components/checkbox.scss';
 @import './components/buttons.scss';
+@import './components/dropdown.scss';
 
 .wrapper__input {
 	width: 450px;
