выполнена 2 страница ui-kit

--- a/src/pages/formElements/components/row1/block-buttons.pug
+++ b/src/pages/formElements/components/row1/block-buttons.pug
@@ -15,4 +15,4 @@ div.column.column--buttons
 		a.btn.btn--buy.btn--theme-purple Перейти к оплате
 	div.row-pagination
 		p.row__caption pagination
-		include ../../../components/pagination/pagination.pug
+		include ../../../../components/pagination/pagination.pug
