--- a/src/pages/colorsFonts/colorsFonts.scss
+++ b/src/pages/colorsFonts/colorsFonts.scss
@@ -5,6 +5,13 @@ body {
 	font-size: 14px;
 }
 
+.wrapper {
+	width: 1440px;
+	margin: 0 auto;
+	margin-left: 9.7%;
+	margin-right: 9.7%;
+}
+
 .logo {
 	margin-top: 30px;
 	margin-left: 30px;
@@ -12,8 +19,7 @@ body {
 
 .wrapper__lists {
 	display: flex;
-	justify-content: space-between;
-	min-width: 1000px;
+	justify-content: flex-start;
 }
 
 .colors {
@@ -97,8 +103,8 @@ body {
 	&__list {
 		margin: 0;
 		padding: 0;
-		margin-top: 62px;
-		margin-right: 190px; 
+		margin-top: 67px;
+    margin-left: 430px;
 		list-style: none;
 	}
 
