--- a/src/pages/formElements/components/row1/block-buttons.scss
+++ b/src/pages/formElements/components/row1/block-buttons.scss
@@ -1,13 +1,13 @@
-@import '../../../components/pagination/pagination.scss';
+@import '../../../../components/pagination/pagination.scss';
 
 .row-slider {
 	width: 100%;
-	height: 80px;
+	height: 73px;
 	border: 1px solid green;
 }
 
 .row-buttons {
-	margin-top: 18px;
+	margin-top: 0px;
 }
 
 .wrapper-button {
