--- a/src/pages/formElements/formElements.scss
+++ b/src/pages/formElements/formElements.scss
@@ -1,11 +1,46 @@
 @import '../../style/global.scss';
-@import './components/block-inputs.scss';
-@import './components/checkbox.scss';
-@import './components/buttons.scss';
-@import './components/dropdown.scss';
+@import './components/row1/block-inputs.scss';
+@import './components/row1/block-checkbox.scss';
+@import './components/row1/block-buttons.scss';
+@import './components/row2/dropdown.scss';
+@import './components/row3/checkbox-list.scss';
+@import './components/row3/checkbox-button.scss';
+@import './components/row3/list.scss';
+@import './components/row4/list.scss';
+@import './components/row4/comments.scss';
 
-.wrapper__input {
-	width: 450px;
+.wrapper-columns {
+	position: relative;
+	width: 1440px;
 	margin: 0 auto;
-	margin-top: 100px;
+	margin-left: 9.7%;
+	margin-right: 9.7%;
+	margin-top: 143px;
+}
+
+.wrapper-columns__logo {
+	position: absolute;
+	top: -113px;
+  left: 30px;
+}
+
+.row {
+	display: flex;
+	justify-content: space-between;
+	margin: 0 9.7%;
+}
+
+.row2 { 
+	margin-top: 75px;
+}
+
+.row3 {
+	margin-top: 44px;
+	justify-content: flex-start;
+}
+
+.row4 {
+	margin-top: 0px;
+	margin-bottom: 130px;
+	justify-content: flex-start;
 }
