--- a/src/style/components/style-buttons.scss
+++ b/src/style/components/style-buttons.scss
@@ -232,6 +232,7 @@ input[type="radio"]:checked + label:after {
 	color: $purple;
 	background: transparent;
 	border-radius: 22px;
+	text-decoration: none;
 
 	border: 2px solid $purple;
 	cursor: pointer;
