--- a/src/components/card-goods/card-goods.pug
+++ b/src/components/card-goods/card-goods.pug
@@ -25,8 +25,8 @@ div.card-goods
 		div.card-goods__column.card-goods__column--bottom
 			div.rating.card-goods__rating
 				div.rating__item.active(data-rate="1")
-				div.rating__item(data-rate="2")
-				div.rating__item(data-rate="3")
-				div.rating__item(data-rate="4")
-				div.rating__item(data-rate="5")
+				div.rating__item.active(data-rate="2")
+				div.rating__item.active(data-rate="3")
+				div.rating__item.active(data-rate="4")
+				div.rating__item.active.current-active(data-rate="5")
 			p.card-goods__comments <b>145</b> Отзывов
