выполнен ui-kit

--- a/src/pages/formElements/components/row1/block-buttons.pug
+++ b/src/pages/formElements/components/row1/block-buttons.pug
@@ -1,6 +1,10 @@
 div.column.column--buttons
 	div.row-slider
-		p.row__caption range slider
+		p.row__caption range slider <span class="slider-value">5 000₽ - 10 000₽</span>
+		div.range-slider
+			span.button
+			span.button.button-two
+			span.range-line
 	div.row-buttons
 		p.row__caption buttons
 		div.wrapper-button
