--- a/src/pages/formElements/components/row1/block-buttons.scss
+++ b/src/pages/formElements/components/row1/block-buttons.scss
@@ -1,11 +1,5 @@
 @import '../../../../components/pagination/pagination.scss';
 
-.row-slider {
-	width: 100%;
-	height: 73px;
-	border: 1px solid green;
-}
-
 .row-buttons {
 	margin-top: 0px;
 }
@@ -60,4 +54,69 @@
 
 .row-pagination {
 	margin-top: 42px;
+}
+
+.row-slider {
+	width: 266px;
+	height: 77px;
+}
+
+.row-slider p {
+	margin-top: 0;
+	position: relative;
+	font-family: $main-font, sans-serif;
+	font-style: normal;
+	font-weight: 600;
+	font-size: 12px;
+	line-height: 15px;
+	text-transform: uppercase;
+	color: #1F2041;
+}
+
+.slider-value {
+	position: absolute;
+	top: 0;
+	right: 0;
+	font-weight: 400;
+	color: rgba(31, 32, 65, 0.5);
+}
+
+.range-slider {
+	margin-top: 25px;
+	position: relative;
+	width: 266px;
+	height: 6px;
+	background: #FFFFFF;
+	border: 1px solid rgba(31, 32, 65, 0.25);
+	box-sizing: border-box;
+	border-radius: 3px;
+}
+
+.range-slider {
+	& .button {
+		position: absolute;
+		width: 12px;
+		height: 12px;
+		top: -6px;
+    left: 72px;
+		background: linear-gradient(180deg, #6FCF97 0%, #66D2EA 100%);
+		border: 2px solid #FFFFFF;
+		border-radius: 10px;
+	}
+
+	& .button-two {
+		position: absolute;
+		top: -6px;
+    left: 158px;
+	}
+
+	& .range-line {
+		position: absolute;
+		top: -1px;
+    left: 87px;
+    width: 72px;
+		height: 6px;
+		background: linear-gradient(180deg, #6FCF97 0%, #66D2EA 100%);
+		border-radius: 3px;
+	}
 }
