--- a/src/pages/main/main.pug
+++ b/src/pages/main/main.pug
@@ -11,5 +11,6 @@ html(lang="ru")
 		div.wrapper
 			div.content
 				include ../../components/header/header.pug
+				include ./components/main-slide/main-slide.pug
 			div.footer-wrapper
 				include ../../components/footer/footer.pug
