--- a/src/style/components/style-buttons.scss
+++ b/src/style/components/style-buttons.scss
@@ -43,7 +43,8 @@ label.field--select {
 		width: 20px;
 		height: 20px;
 		background: url('../img/sprite.png') no-repeat;
-		background-position: -680px -12px;
+		background-position: -742px -12px;
+		z-index: 3;
 	}
 }
 
