--- a/src/pages/main/main.scss
+++ b/src/pages/main/main.scss
@@ -1,5 +1,6 @@
 @import '../../style/global.scss';
 @import '../../components/header/header.scss';
+@import './components/main-slide/main-slide.scss';
 @import '../../components/footer/footer.scss';
 
 .visually-hidden {
