--- a/src/style/components/variables.scss
+++ b/src/style/components/variables.scss
@@ -15,8 +15,8 @@ $caption-font: 'Quicksand', 'Montserrat';
 	font-family: $caption-font, sans-serif;
 	font-style: normal;
 	font-weight: 600;
-	font-size: 24px;
-	line-height: 30px;
+	font-size: 1.7rem;
+	line-height: 2.1rem;
 	color: $black;
 }
 
@@ -24,8 +24,8 @@ $caption-font: 'Quicksand', 'Montserrat';
 	font-family: $caption-font, sans-serif;
 	font-style: normal;
 	font-weight: 600;
-	font-size: 19px;
-	line-height: 24px;
+	font-size: 1.3rem;
+	line-height: 1.7rem;
 	color: $black;
 }
 
@@ -33,8 +33,8 @@ $caption-font: 'Quicksand', 'Montserrat';
 	font-family: $main-font, sans-serif;
 	font-style: normal;
 	font-weight: 600;
-	font-size: 12px;
-	line-height: 15px;
+	font-size: 0.85rem;
+	line-height: 1.07rem;
 	text-transform: uppercase;
 	color: $black;
 }
@@ -43,8 +43,8 @@ $caption-font: 'Quicksand', 'Montserrat';
 	font-family: $main-font, sans-serif;
 	font-style: normal;
 	font-weight: 400;
-	font-size: 14px;
-	line-height: 24px;
+	font-size: 1rem;
+	line-height: 1.7rem;
 	color: $black-75;
 }
 
@@ -54,10 +54,10 @@ $caption-font: 'Quicksand', 'Montserrat';
 	font-family: $main-font, sans-serif;
 	font-style: normal;
 	font-weight: 400;
-	font-size: 14px;
-	line-height: 18px;
-	padding: 13px 15px;
-	border-radius: 4px;
+	font-size: 1rem;
+	line-height: 1.2rem;
+	padding: 0.9em 1.07em;
+	border-radius: 0.28em;
 	box-sizing: border-box;
 	color: $black-75;
 	border: 1px solid $black-25;
