выполнены страницы входа и регистрации

--- a/src/components/header/header.pug
+++ b/src/components/header/header.pug
@@ -1,6 +1,6 @@
 header.header
   div.logo.header__logo
-    a.logo__link(href="index.html")
+    a.logo__link(href="main.html")
       img.logo__img(src="./assets/img/logo.png" alt="Логотип сайта «Toxin»" width="105px" heigth="40px")
   ul.nav.header__nav
     li.nav__item
@@ -14,6 +14,6 @@ header.header
     li.nav__item.nav__item--sublist
       a.nav__link(href="/mock-address/change-me") Соглашения
   div.authorization.header__authorization
-    a.btn.authorization__btn(href="/mock-address/change-me" id="log-on") Войти
-    a.btn.btn--theme-purple.authorization__btn(href="/mock-address/change-me" id="sing-up") Зарегистрироваться
+    a.btn.authorization__btn(href="./signOn.html" id="log-on") Войти
+    a.btn.btn--theme-purple.authorization__btn(href="./signUp.html" id="sing-up") Зарегистрироваться
     a.btn.authorization__btn.visually-hidden(href="/mock-address/change-me" id="authorized-user") Иван Иванов
