--- a/src/components/date-picker/date-picker.pug
+++ b/src/components/date-picker/date-picker.pug
@@ -1,6 +1,8 @@
 mixin datepicker(id, oneLabel, addInput, twoLabel)
 	label.date-picker__label.field--select= oneLabel
-		input.date-picker__input.date-picker__input--arrival(type="text" id= id placeholder="ДД.ММ.ГГГГ" spellcheck="false" redonly) 
+		input.date-picker__input.date-picker__input--arrival(type="text" id= id placeholder="ДД.MM - ДД.ММ" spellcheck="false" redonly) 
 	if addInput
+		label.date-picker__label.field--select= oneLabel
+			input.date-picker__input.date-picker__input--arrival(type="text" id= id placeholder="ДД.ММ.ГГГГ" spellcheck="false" redonly) 
 		label.date-picker__label.field--select= twoLabel
 			input.date-picker__input.date-picker__input--departure(type="text" placeholder="ДД.ММ.ГГГГ" spellcheck="false" redonly) 
