--- a/src/pages/catalog/components/sidebar/sidebar.scss
+++ b/src/pages/catalog/components/sidebar/sidebar.scss
@@ -4,10 +4,6 @@
 
 .sidebar {
 	width: 266px;
-
-	border: 1px solid red;
-	margin: 0 auto;
-	margin-top: 20px;
 }
 
 .filter {
@@ -79,6 +75,7 @@
 	&__caption {
 		position: relative;
 		margin-bottom: 18px;
+		cursor: pointer;
 	}
 
 	&__toggle {
@@ -89,6 +86,7 @@
 		height: 20px;
 		background: url('../img/sprite.png') no-repeat;
     background-position: -742px -15px;
+    cursor: pointer;
 	}
 
 	&__toggle.active {
